fixed scrolling issue on mobile

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -23,7 +23,7 @@ button{
 }
 
 body{
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     background: linear-gradient(to right, #0000008a, #0000008a), url('../assets/peak-district.jpg');
     background-size: cover;
@@ -42,8 +42,8 @@ body{
     //gap: 1rem;
     margin-inline: auto;
     width: min(100%, 800px);
-    height: 100vh;
-    overflow-y: scroll hidden;
+    max-height: 100%;
+    overflow-y: scroll;
 
     >div{
         width: 80%;
